--- a/index.html
+++ b/index.html
@@ -6,6 +6,18 @@
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
-    <p>eee</p>
+    <div class="main">
+        <img src="img-main.jpg" >
+        <h2 id="xleb">XLEBOVOZ</h2>
+        <p id="develop">Python and front-end developer</p>
+        
+        <a href="https://github.com/xlebovoz">
+        <div class="links">GitHub</div>
+        </a>
+        <div class="links">Telegram</div>
+        <div class="links">Codewars</div>
+        <div class="links">Stackoverflow</div>
+        <div class="links">Frontend Mentor</div>
+    </div>
 </body>
 </html>
