--- a/index.html
+++ b/index.html
@@ -4,20 +4,40 @@
     <meta charset="UTF-8">
     <title>XLEBOVOZ-links</title>
     <link rel="stylesheet" href="main.css">
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap" rel="stylesheet">
+    <link rel="icon" href="img-title.png" type="image/x-icon"/>
+
+    
+    <meta property="og:title" content="XLEBOVOZ-links"/>
+    <meta property="og:description" content="My-links"/>
+    <meta property='og:type' content='website'/>
+
 </head>
 <body>
     <div class="main">
-        <img src="img-main.jpg" >
+        <img src="img-main.jpg" alt="Avatar">
         <h2 id="xleb">XLEBOVOZ</h2>
         <p id="develop">Python and front-end developer</p>
         
         <a href="https://github.com/xlebovoz">
         <div class="links">GitHub</div>
         </a>
+
+        <a href="https://t.me/XLEb_Grib">
         <div class="links">Telegram</div>
+        </a>
+
+        <a href="https://www.codewars.com/users/baton%20xleba">
         <div class="links">Codewars</div>
+        </a>
+
+        <a href="https://stackoverflow.com/users/29559006/xleb">
         <div class="links">Stackoverflow</div>
+        </a>
+
+        <a href="https://www.frontendmentor.io/profile/xlebovoz">
         <div class="links">Frontend Mentor</div>
+        </a>
     </div>
 </body>
 </html>
