--- a/index.html
+++ b/index.html
@@ -33,5 +33,9 @@
         <div class="links">Frontend Mentor</div>
         </a>
     </div>
+
+  <div class="attribution" style="color: white;">    
+    Coded by <a href="https://github.com/xlebovoz">XLEBOVOZ</a>
+  </div>
 </body>
 </html>
