--- a/index.html
+++ b/index.html
@@ -6,11 +6,14 @@
     <title>XLEBOVOZ-links</title>
     <link rel="stylesheet" href="main.css">
     <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap" rel="stylesheet">
-    <link rel="icon" href="img-title.png" type="image/x-icon"/>
+    <link rel="icon" href="imgs/img-title.png" type="image/x-icon"/>
 </head>
 <body>
+    <noscript>please enable js</noscript>
+    <img src="imgs/sun.png" alt="theme" id="theme">
+
     <div class="main">
-        <img src="img-main.jpg" alt="Avatar">
+        <img src="imgs/img-main.jpg" alt="Avatar">
         <h2 id="xleb">XLEBOVOZ</h2>
         <p id="develop">Python and front-end developer</p>
         
@@ -34,5 +37,6 @@
         <div class="links">Frontend Mentor</div>
         </a>
     </div>
+    <script src="main.js"></script>
 </body>
 </html>
