--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
     <noscript>please enable js</noscript>
     <img src="imgs/sun.png" alt="theme" id="theme">
 
-    <div class="main">
+    <div id="main_div">
         <img src="imgs/img-main.jpg" alt="Avatar">
+        
         <h2 id="xleb">XLEBOVOZ</h2>
         <p id="develop">Python and front-end developer</p>
         
