--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="links">GitHub</div>
         </a>
 
-        <a href="https://t.me/XLEb_Grib">
+        <a href="https://t.me/lHOVOHl">
         <div class="links">Telegram</div>
         </a>
 
