--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
     <link rel="icon" href="imgs/img-title.png" type="image/x-icon"/>
 </head>
 <body>
-    <noscript>please enable js</noscript>
+    <noscript>
+        <meta http-equiv="refresh" content="0; url=noscript.html">
+    </noscript>
+
     <img src="imgs/sun.png" alt="theme" id="theme">
 
     <div id="main_div">
