--- a/noscript.html
+++ b/noscript.html
@@ -7,6 +7,15 @@
     <title>NoScript</title>
 </head>
 <body>
+    <div>
+        <h1 id="title">JS is not found</h1>
+    </div>
+
+    <div>
+        <a href="https://www.enable-javascript.com/" id="link">How to enable JS?</a>
+    </div>
+
+
     
 </body>
 </html>
